--- a/Styles/video.css
+++ b/Styles/video.css
@@ -12,7 +12,7 @@
     align-items: center;
 }
 .thumbnail {
- height: auto;
+ height: 200px;
     width: 100%;
     max-height: 200px;
     position: relative;
