--- a/Styles/sidebar.css
+++ b/Styles/sidebar.css
@@ -1,5 +1,5 @@
  /* Sidebar Styles */
-        .sidebar {
+        .sidebar{
             width: 200px;
             position: fixed;
             left: 0;
@@ -9,14 +9,14 @@
             overflow-x: hidden;
             padding-top: 20px;
         }
-        .sidebar a {
+        .sidebar {
             padding: 10px 15px;
             text-decoration: none;
             font-size: 18px;
             color: #333;
             display: block;
         }
-        .sidebar a:hover {
+        .sidebar:hover {
             color: #007bff;
         }
         .main-content {
