--- a/Styles/sidebar.css
+++ b/Styles/sidebar.css
@@ -14,6 +14,7 @@
             text-decoration: none;
             font-size: 18px;
             color: #333;
+          background-color: #f4f4f4;
             display: block;
         }
         .sidebar a:hover {
