--- a/Styles/sidebar.css
+++ b/Styles/sidebar.css
@@ -1,18 +1,16 @@
  /* Sidebar Styles */
         .sidebar {
             width: 100px;
-            position: fixed;
+            position: relative;
             left: 0;
             top: 0;
-            height: 100%;
-            background-color: rgb(211, 28, 28);
+            height: 100vh;
             overflow-x: hidden;
             padding-top: 20px;
         }
         .sidebar a {
             padding: 10px 15px;
             text-decoration: none;
-         background-color: rgb(211, 28, 28);
             font-size: 18px;
             color: #333;
           background-color: #f4f4f4;
