--- a/Styles/sidebar.css
+++ b/Styles/sidebar.css
@@ -1,7 +1,7 @@
  /* Sidebar Styles */
         .sidebar {
             width: 100px;
-            position: relative;
+            position: absolute;
             left: 0;
             top: 0;
             height: 100vh;
