--- a/Styles/sidebar.css
+++ b/Styles/sidebar.css
@@ -12,6 +12,7 @@
             padding: 10px 15px;
             text-decoration: none;
             font-size: 18px;
+         font-family: 'Roboto', sans-serif; 
             color: #333;
           background-color: #f4f4f4;
             display: block;
