--- a/Styles/sidebar.css
+++ b/Styles/sidebar.css
@@ -14,7 +14,7 @@
             font-size: 18px;
          font-family: 'Roboto', sans-serif; 
             color: #333;
-          background-color: #f4f4f4;
+          background-color:#e0cbcb;
             display: block;
         }
         .sidebar a:hover {
