--- a/Styles/sidebar.css
+++ b/Styles/sidebar.css
@@ -19,7 +19,7 @@
         }
         .sidebar a:hover {
          background-color:#6f5d5d;
-            color: #555555;
+            color: white;
          
         }
         .main-content {
