--- a/Styles/sidebar.css
+++ b/Styles/sidebar.css
@@ -18,6 +18,8 @@
             display: block;
         }
         .sidebar a:hover {
+         transition: background-color 0.5s ease 0.2s; 
+         transition: color 0.5s ease 0.2s; 
          background-color:#6f5d5d;
             color: white;
          
