--- a/Styles/css_header.css
+++ b/Styles/css_header.css
@@ -1,3 +1,9 @@
+#top-banner img {
+    width: 100%;  /* Make the image take the full width of its container */
+    height: auto; /* Keep the aspect ratio of the image */
+    display: block; /* Remove any extra space below the image */
+}
+
 #logo img {
     width: 150px; /* Adjust to your preferred width */
     height: auto; /* Maintain aspect ratio */
