--- a/Styles/css_header.css
+++ b/Styles/css_header.css
@@ -3,6 +3,7 @@
     align-items: center; /* Align items vertically */
     justify-content: start; /* Start alignment horizontally */
     width: 100%; /* Full width */
+    height:150px;
     background-color: #333; /* Optional: background color for the top bar */
 }
 
