--- a/Styles/css_header.css
+++ b/Styles/css_header.css
@@ -3,8 +3,7 @@
     align-items: center; /* Align items vertically */
     justify-content: start; /* Start alignment horizontally */
     width: 100%; /* Full width */
-    height:150px;
-    background-color: #333; /* Optional: background color for the top bar */
+     background-color: #333; /* Optional: background color for the top bar */
 }
 
 #logo img {
@@ -15,8 +14,9 @@
 
 #top-banner img {
     height: auto;
+    width: auto;
     flex-grow: 1; /* Allow banner to take the remaining space */
-    object-fit: cover; /* Cover the area without losing aspect ratio */
+    object-fit: contain; /* Cover the area without losing aspect ratio */
 }
 nav {
     background-color: #333;  /* Background Color */
