--- a/Styles/sidebar.css
+++ b/Styles/sidebar.css
@@ -1,8 +1,8 @@
 .sidebar {
     width: 100px;
-    position: fixed; /* Changed to fixed for consistent positioning */
+    position: absolute; /* Changed to fixed for consistent positioning */
     left: 0;
-    top: 220px; /* Adjusted based on the actual height of the header */
+    top: 240px; /* Adjusted based on the actual height of the header */
     height: calc(100vh - 150px); /* Adjusted height based on the header */
     overflow-x: hidden;
     padding-top: 20px;
