--- a/Styles/css_header.css
+++ b/Styles/css_header.css
@@ -5,7 +5,7 @@
     width: 100%; /* Full width */
     background-color: #333; /* Optional: background color for the top bar */
 }
-.blog{
+.main{
     margin-left:50px;
       padding-left: 100px;
 }
