--- a/Styles/css_side_menu.css
+++ b/Styles/css_side_menu.css
@@ -5,7 +5,7 @@
     font-family: 'Roboto', sans-serif;
     width: 175px;
     height: auto;
-    background-color: (216,205,160);
+    background-color: #d8cda0;
     color: white;
     overflow-y: auto;
     border-radius: 10px;
