--- a/Styles/sidebar.css
+++ b/Styles/sidebar.css
@@ -6,7 +6,7 @@
     height: calc(100vh - 150px); /* Adjusted height based on the header */
     overflow-x: hidden;
     padding-top: 20px;
-    background-color: #e0cbcb;
+    background-color: #D8CDA0;
 }
 
 .sidebar a {
@@ -15,7 +15,7 @@
     font-size: 18px;
     font-family: 'Roboto', sans-serif;
     color: #333;
-    background-color: #e0cbcb;
+    background-color: #D8CDA0;
     display: block;
 }
 
