--- a/Styles/css_header.css
+++ b/Styles/css_header.css
@@ -20,7 +20,7 @@ body, h1, h2, h3, p, ul, li {
 
 /* Add a background color to the whole page */
 body {
-    background-color: #e0cbcb;
+    background-color: #d8cda0;
   
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell;
 }
