--- a/Styles/css_header.css
+++ b/Styles/css_header.css
@@ -80,7 +80,7 @@ nav ul li a {
 
 /* Add hover effect */
 nav ul li a:hover {
-    background-color: #d8cda0;  /* Background Color on Hover */
+    background-color: #a0d8cd;  /* Background Color on Hover */
     border-radius: 5px;  /* Rounded Corners */
 }
 /* To apply Roboto font to your navigation headers */
