--- a/Styles/css_header.css
+++ b/Styles/css_header.css
@@ -14,13 +14,13 @@ main{
       padding-left: 100px;
 }
 
-body, h1, h2, h3, p, ul, li {
+body, h1, h2, h3, p {
   background-color:#D8CDA0;
     padding-bottom: 10px; /* Removed right padding, as it's not generally needed */
 }
 
 /* Add a background color to the whole page */
-body {
+ ul, li {
     background-color: #d8cda0;
   
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell;
