--- a/Styles/css_header.css
+++ b/Styles/css_header.css
@@ -14,7 +14,7 @@ main{
       padding-left: 100px;
 }
 
-body, h1, h2, h3, p {
+ h1, h2, h3, p {
   background-color:#D8CDA0;
     padding-bottom: 10px; /* Removed right padding, as it's not generally needed */
 }
