--- a/Styles/css_header.css
+++ b/Styles/css_header.css
@@ -21,7 +21,7 @@ main{
 
 /* Add a background color to the whole page */
  ul, li {
-    background-color: #d8cda0;
+    background-color: #3B341F;
   
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell;
 }
