--- a/Styles/css_header.css
+++ b/Styles/css_header.css
@@ -83,6 +83,7 @@ nav ul li a {
 nav ul li a:hover {
     background-color: 	 #2e414d;  /* Background Color on Hover */
     border-radius: 5px;  /* Rounded Corners */
+    color:white;
       transition: background-color 0.2s ease, color 0.2s ease;
 }
 /* To apply Roboto font to your navigation headers */
