--- a/Styles/css_header.css
+++ b/Styles/css_header.css
@@ -24,7 +24,7 @@ main{
  ul, li {
     background-color: #6C6650;
   
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell;
+    font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell;
 }
 
 #logo {
