--- a/Styles/css_header.css
+++ b/Styles/css_header.css
@@ -47,10 +47,10 @@ main{
     object-fit: cover; /* Cover the area without losing aspect ratio */
 }
 
-nav {
+/*nav {
     background-color: #333;  /* Background Color */
      
-}
+}/
 
 nav ul {
     list-style: none;  /* Remove bullet points */
@@ -75,16 +75,8 @@ nav ul li a {
 }
 
 
-/* To apply Roboto font to your navigation headers */
-nav ul li {
-    font-family: 'Roboto', sans-serif; /* Roboto font with a sans-serif fallback */
-    font-size: 24px;  
-    flex-grow: 1;
-    text-align: center;
-}
 
-
-#header-image img {
+  #header-image img {
 
     width: 100vw;
     max-width: 100%;
@@ -92,7 +84,7 @@ nav ul li {
     object-fit: cover;
   
 }
-*************************
+
 nav ul li a:link, nav ul li a:visited {
     color: white ;
 }
